--- a/charts/kashti/values.yaml
+++ b/charts/kashti/values.yaml
@@ -3,12 +3,12 @@ brigade:
 
 replicaCount: 1
 image:
-  repository: deis/kashti
-  tag: latest
+  repository: nestaway/kashti
+#  tag: latest
   pullPolicy: IfNotPresent
 service:
   name: kashti
-  type: LoadBalancer
+  type: NodePort
   externalPort: 80
   internalPort: 80
 ingress:
@@ -29,9 +29,9 @@ resources: {}
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  #requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
