--- a/charts/kashti/Chart.yaml
+++ b/charts/kashti/Chart.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 description: A Helm chart for Kubernetes
 name: kashti
 version: 0.1.0
-appVersion: v0.2.0
+appVersion: v0.2.0-2-g827d13f
