--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve",
     "start prod": "ng serve --prod",
     "build": "ng build",
-    "docker-build": "docker build -t deis/kashti:$(git describe --tags --always) .",
+    "docker-build": "docker build -t nestaway/kashti:$(git describe --tags --always) .",
     "test": "ng lint && ng test",
     "test-ci": "ng lint && ng test --single-run && ng e2e",
     "lint": "ng lint",
