--- a/charts/kashti/Chart.yaml
+++ b/charts/kashti/Chart.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 description: A Helm chart for Kubernetes
 name: kashti
 version: 0.1.0
-appVersion: v0.3.0-rc1-11-g5f3832d
+appVersion: v0.3.0-rc1-27-gc3f032f
